Try to fix text layer align

--- a/src/components/pdf/pdf.scss
+++ b/src/components/pdf/pdf.scss
@@ -63,8 +63,13 @@
   line-height: 1;
 }
 
+.react-pdf__Page__textContent {
+  margin: 0 auto !important;
+}
+
 .react-pdf__Page__textContent span {
   opacity: 0.5;
+  margin: 0 auto !important;
 }
 
 .react-pdf__Page__textContent span::selection {
@@ -75,7 +80,7 @@
 }
 
 .react-pdf__Page__canvas {
-  //max-width: 100%;
+  margin: 0 auto;
 }
 
 .react-pdf__Document {
@@ -83,7 +88,7 @@
 }
 
 .ReactVirtualized__Grid__innerScrollContainer {
-  // overflow: initial !important;
+  overflow: initial !important;
   // display: flex !important;
   // justify-content: center !important;
   // div {
